# Neutron_Star

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  Modelfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/agents/: neutron_star.agent.md
.github/workflows/: ci.yml  static.yml
Atoms/backend/: __init__.py  debug_config.py
Atoms/backend/core/: __init__.py  entities.py  interfaces.py  services.py
Atoms/backend/core/entidades/: __init__.py  entidade_arquivo.py  entidade_bookmark.py  entidade_diretorio.py  entidade_processamento.py  entidade_sistema_operacional.py  resultado_processamento.py
Atoms/backend/core/interfaces/: __init__.py  bookmark_exporter.py  bookmark_parser.py  bookmark_repository.py  file_scanner.py
Atoms/backend/infrastructure/: __init__.py  analisador.py  exporters.py  file_scanners.py  identifier.py  parser.py  scanners.py  so_identifier.py
Atoms/backend/infrastructure/controllers/: __init__.py  file_scanners.py  parser.py  so_identifier.py
Atoms/backend/infrastructure/exporters/: __init__.py  csv_exporter.py  json_exporter.py  pdf_exporter.py
Atoms/frontend/: __init__.py  cli_display.py  display.py
Atoms/frontend/cli/: __init__.py  cli_display.py  display.py  main.py
Atoms/outputs/: bookmarks.csv
Atoms/src/: main.py
Atoms/src/control/: __init__.py  buscador.py  identificador.py
Atoms/src/model/: __init__.py  arquivo_info.py  configuracoes.py  diretorio_info.py  item_neutro.py  resultado_busca.py
Atoms/src/tools/: __init__.py  system_tools.py
Atoms/src/view/: __init__.py  apresentador.py
Atoms/tests/: __init__.py
Atoms/tests/back/: __init__.py
Atoms/tests/back/unit/: __init__.py
Atoms/tests/back/unit/core/: __init__.py  test_entidade_arquivo.py  test_entidade_bookmark.py  test_entidade_diretorio.py  test_entidade_processamento.py  test_entities.py
Atoms/tests/back/unit/infrastructure/: __init__.py  test_exporters.py  test_file_scanners.py  test_infrastructure.py  test_parser.py  test_parser_identifier.py  test_services.py  test_so_identifier.py
Atoms/tests/unit/: test_infrastructure.py
Atoms/tests/unit/core/: test_entities.py
docs/: Makefile  arquitetura.rst  conf.py  guia_idioma.rst  index.rst  uso.rst
docs/api/: controllers.rst  models.rst  utils.rst  views.rst
src/domain/entities/: operating_system.py
src/domain/ports/: logger_port.py  system_detector_port.py
src/domain/use_cases/: identify_system.py
src/infrastructure/: logging_logger.py  platform_system_detector.py
tests/: test_placeholder.py
tests/test_domain/: test_identify_system.py
