[tool.setuptools.packages.find]
where = ["Atoms"]

[build-system]
# Define qual backend de build será usado (setuptools, poetry, etc.)
requires = ["setuptools>=61.0", "wheel"]
# Backend responsável por empacotar o projeto
build-backend = "setuptools.build_meta"

[project]
# Nome do pacote/projeto publicado
name = "neutron-star"
# Versão atual do projeto
version = "0.1.0"
# Breve descrição exibida em ferramentas como pip/PD
description = "Scanner de bookmarks HTML com integração a assistente de IA local."
# Arquivo README utilizado como descrição longa (ex: no PyPI)
readme = "README.md"
# Licença do projeto
license = { text = "MIT" }
# Versão mínima de Python suportada
requires-python = ">=3.10"
# Autores do projeto
authors = [
  { name = "Pedro Dias", email = "pedro@example.com" },
]

# Lista de dependências obrigatórias em tempo de execução
dependencies = [
  # Biblioteca para requisições HTTP (usada na CLI de IA)
  "requests",
  # Formatação rica de terminal (Markdown, cores)
  "rich",
]

[project.scripts]
neutron = "src.presentation.cli.comandos:main"

[project.optional-dependencies]
# Dependências específicas para desenvolvimento (testes, lint, etc.)
dev = [
  # Framework de testes
  "pytest>=7.0",
  # Geração de relatórios de cobertura
  "pytest-cov>=4.0",
  # Suporte a mocks no pytest
  "pytest-mock>=3.10",
  # Formatador de código
  "black>=23.0",
  # Linter de estilo/código
  "flake8>=6.0",
  "flake8-pyproject",
  # Verificador de tipos
  "mypy>=1.0",
  # Organizador de imports
  "isort>=5.12",
  # Ferramenta de pré-commit
  "pre-commit>=3.0",
  # Analisador de segurança
  "bandit>=1.7",
]

[tool.pytest.ini_options]
# Versão mínima do pytest
minversion = "7.0"
# Diretório raiz onde o pytest começa a procurar testes
testpaths = ["tests"]
# Padrões de descoberta de testes
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Opções padrão de linha de comando (ex: cobertura, verbosidade)
addopts = "-v --tb=short --strict-markers"
# Marcadores customizados
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[tool.black]
# Versão alvo do Python para o Black
target-version = ["py310"]
# Tamanho máximo de linha
line-length = 100
# Arquivos incluídos
include = '\.pyi?$'

[tool.isort]
# Compatibilidade com o estilo do Black
profile = "black"
line_length = 100

[tool.flake8]
# Tamanho máximo de linha (deve ser igual ao do Black)
max-line-length = 100
# Ignorar erros de linha longa (E501) já tratados pelo Black
ignore = ["E501", "W503"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true


[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  'if __name__ == "__main__":',
]

[tool.pylinter]
# Configurações específicas para o Pylint (se usado)
disable = [
  "too-few-public-methods",      # R0903 - Ignora classe com poucos métodos públicos.
  "too-many-arguments",          # R0913 - Ignora função com muitos argumentos.
  "too-many-public-methods",     # R0915 - Ignora classe com muitos métodos públicos.
  "pointless-string-statement",  # W0105 - Ignora docstrings como declarações de string sem efeito.
  "unnecessary-pass",            # W0107 - Ignora declarações de pass desnecessárias.
  "protected-access",            # W0212 - Ignora acesso a membros protegidos.
  "redefined-outer-name",        # W0621 - Ignora redefinição de nome de variável externa.
  "redefined-builtin",           # W0622 - Ignora redefinição de built-ins.
  "unnecessary-ellipsis",        # W2301 - Ignora constantes de elipsis desnecessárias.
]
