[tool.setuptools.packages.find]
# 'where = ["Atoms"]' faz o setuptools adicionar Atoms/ ao sys.path e
# procurar pacotes dentro dela (models, controllers, views, utils).
# Imports no código usam 'from models.xxx import ...' — sem prefixo 'Atoms.'.
where = ["Atoms"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutron-star"
version = "0.1.0"
description = "Ferramenta CLI de busca em sistema de arquivos com filtros avançados."
readme = "README.md"
license = { text = "GNU GPL v3" }
requires-python = ">=3.10"
authors = [
  { name = "Pedro Dias", email = "diaspedro.dev@gmail.com" },
]

dependencies = [
  # Formatação rica de terminal (tabelas, Markdown, cores).
  "rich",
  # Parser XML/HTML rápido (reservado para expansão futura).
  "lxml",
]

[project.scripts]
# FIX [BUG CRÍTICO]: entrada CLI corrigida.
# Antes: "frontend.cli.main:main" (módulo inexistente).
# Depois: "main:main" (aponta para Atoms/main.py, função main()).
neutron = "main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.10",
  "black>=23.0",
  "ruff>=0.4.0",
  "mypy>=1.0",
  "pre-commit>=3.0",
  "bandit>=1.7",
  "pip-audit>=2.10.1",
  # Documentação — furo é o tema dark moderno recomendado para Sphinx
  "sphinx>=7.0",
  "furo>=2024.1.29",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["Atoms/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
  "slow: marca testes lentos (ex: que acessam disco ou rede).",
  "integration: marca testes de integração.",
  "unit: marca testes unitários puros.",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = ["Atoms/tests"]

[tool.coverage.run]
source = ["Atoms"]
omit = ["tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  'if __name__ == "__main__":',
]

[tool.pylint]
disable = [
  "too-many-positional-arguments",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-public-methods",
  "pointless-string-statement",
  "unnecessary-pass",
  "protected-access",
  "redefined-outer-name",
  "redefined-builtin",
  "unnecessary-ellipsis",
  "invalid-name",
  "abstract-class-instantiated",
  "too-many-instance-attributes",
]
